fix edge selection change overflow

--- a/src/typescript/components/input-number/input-number.pcss
+++ b/src/typescript/components/input-number/input-number.pcss
@@ -5,6 +5,10 @@
 
     input {
         appearance: textfield;
+
+        &::-ms-clear {
+            display: none;
+        }
     }
 
     input::-webkit-outer-spin-button,
